# winds-mobi-providers

./: .dockerignore  .env.localhost.template  .env.template  .flake8  .gitignore  Dockerfile  Pipfile  README.md  admin_clusters.py  admin_stations.py  borntofly.py  clusters.py  compose.services.yaml  compose.yaml  delete_stations.py  docker-cmd.sh  docker-compose.mongodb.yml  docker-compose.yaml  docker-compose.yml  ffvl.py  fluggruppe_aletsch.py  gxaircom.py  holfuy.py  iweathar.py  jdc.py  jdc_email.py  metar_noaa.py  meteoswiss_opendata.py  pdcs.py  pgschema.sql  pioupiou.py  provider.sh  pyproject.toml  requirements.txt  romma.py  run_providers.py  run_scheduler.py  settings.py  setup.cfg  slf.py  (+5 more)
.github/: CODEOWNERS
.github/workflows/: build-deploy-production-docker.yaml  build-deploy-production-docker.yml  test-python.yaml  test-python.yml
admin_jobs/: delete_stations.py  find_duplicates.py  save_clusters.py
commons/: logging_console.yml  logging_file.yml  projections.py  provider.py  user_agents.py  uwxutils.py  wgs84.py
db-migration/: migrate-measurement-collection-to-ttl.js
db-utils/: distribute_redis_ttl.lua  redis_export.py
deploy/: crontab.txt  provider.sh  update.sh
jdc/: 1017.gpm  m2a.class.php  m2a_to_json.php  test.php  test.py
jdc/gpm-files/: Chalais - 180°.gpm  Le Suchet.gpm  Roche Devant - meter per second.gpm
jdc/gpm-files/failing/: 1004.gpm
metar/: stations.json  stations.py
providers/: aletsch.py  borntofly.py  cumulusmx.py  example.py  ffvl.py  fluggruppe_aletsch.py  grafcan.py  gxaircom.py  holfuy.py  iweathar.py  kachelmannwetter.py  metar.py  metar_noaa.py  meteoswiss.py  meteoswiss_opendata.py  myexample.py  openwindmap.py  pdcs.py  pgsonda.py  pioupiou.py  pmcjoder.py  romma.py  slf.py  thunerwetter.py  windball.py  windline.py  windspots.py  windy.py  wunderground.py  yvbeach.py  zermatt.py
providers/metar/: stations.json  stations.py
slf/: IMIS_SNOW_EN.kml  IMIS_SPECIAL_EN.kml  IMIS_WIND_EN.kml
tests/: geolocation_test.py  pressure_test.py  provider_test.py
winds_mobi_provider/: __init__.py  db.py  logging.py  logging.yml  logging_console.yml  provider.py  units.py  user_agents.py  wgs84.py
winds_mobi_providers/: __init__.py  logging.py  provider.py  units.py
