[tool.poetry]
name = "winds-mobi-provider"
description = "Python scripts that get the weather data from different providers and save it in a common format into mongodb."
version = "0.0.0"
authors = ["winds.mobi"]
license = "	AGPL-3.0-only"

[tool.poetry.dependencies]
python = "3.10.*"

apscheduler = "3.10.0"
arrow = "1.2.3"
cachetools = "5.2.0"
furl = "2.1.3"
lxml = "4.9.1"
mysqlclient = "2.2.0"
pint = "0.19.2"
psycopg2 = "2.9.3"
pyaml = "21.10.1"
pydantic = "1.10.5"
pymongo = "4.2.0"
pyproj = "3.4.0"
redis = "4.3.4"
requests = {extras = ["socks"], version = "2.28.1"}
scikit-learn = "1.1.2"
scipy = "1.9.1"
sentry-sdk = "1.16.0"
tenacity = "8.0.1"
timezonefinder = "6.2.0"

[tool.poetry.group.dev.dependencies]
black = "23.11.0"
flake8 = "6.1.0"
isort = "5.12.0"
pytest = "7.4.3"
pytest-dotenv = "0.5.2"
python-dotenv = "1.0.0"

[tool.pytest.ini_options]
env_files = ".env.localhost"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
force-exclude  = '''
^/winds_mobi_provider/uwxutils.py
'''

[tool.isort]
profile = "black"
line_length = 120
skip = ["winds_mobi_provider/uwxutils.py"]
