[project]
name = "winds-mobi-provider"
description = "Python scripts that get the weather data from different providers and save it in a common format into mongodb."
version = "0.0.0"
authors = [{ name = "winds.mobi" }]
license = "	AGPL-3.0-only"
requires-python = ">=3.13"

dependencies = [
    "apscheduler==3.11.1",
    "arrow==1.4.0",
    "cachetools==6.2.2",
    "furl==2.1.4",
    "lxml==6.0.2",
    "mysqlclient==2.2.7",
    "pint==0.25.2",
    "psycopg2==2.9.11",
    "pyaml==25.7.0",
    "pydantic==2.12.5",
    "pymongo==4.15.5",
    "pyproj==3.7.2",
    "redis==7.1.0",
    "requests[socks]==2.32.5",
    "scikit-learn==1.7.2",
    "scipy==1.16.3",
    "sentry-sdk==2.47.0",
    "tenacity==9.1.2",
    "timezonefinder==8.1.0",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "ruff==0.14.8",
    "scipy-stubs==1.16.3.2",
]

[tool.ruff]
line-length = 120
exclude = ["winds_mobi_provider/uwxutils.py"]

[tool.ruff.lint]
select = [
    "E", "W",
    "F",
    "SIM",
    "B",
    "UP",
    "I",
]
ignore = ["B023"]
